2018-05-24  Carlos Garcia Campos  <cgarcia@igalia.com>

        WebDriver: implement maximize, minimize and fullscreen window commands
        https://bugs.webkit.org/show_bug.cgi?id=180398

        Reviewed by Brian Burg.

        Remove expectations for tests that are passing now.

        * TestExpectations.json:

2018-05-21  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed gardening. Update several test expectations.

        * TestExpectations.json:

2018-05-16  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Remove W3C deleted files after r231727.

        In r231727 W3C WebDriver tests were updated, but only new and modified files, not the deleted (or renamed)
        ones. Remove the deleted files and update the test expectations to use the new names.

        * TestExpectations.json: Update expectations after test renames in r231727.
        * imported/w3c/tools/wptrunner/wptrunner/executors/testharness_marionette.js: Removed.
        * imported/w3c/tools/wptrunner/wptrunner/executors/testharness_marionette_resume.js: Removed.
        * imported/w3c/webdriver/tests/contexts/json_serialize_windowproxy.py: Removed.
        * imported/w3c/webdriver/tests/contexts/maximize_window.py: Removed.
        * imported/w3c/webdriver/tests/contexts/resizing_and_positioning.py: Removed.
        * imported/w3c/webdriver/tests/cookies/add_cookie.py: Removed.
        * imported/w3c/webdriver/tests/cookies/delete_cookie.py: Removed.
        * imported/w3c/webdriver/tests/cookies/get_named_cookie.py: Removed.
        * imported/w3c/webdriver/tests/document_handling/page_source.py: Removed.
        * imported/w3c/webdriver/tests/element_retrieval/__init__.py: Removed.
        * imported/w3c/webdriver/tests/element_retrieval/find_element.py: Removed.
        * imported/w3c/webdriver/tests/element_retrieval/find_element_from_element.py: Removed.
        * imported/w3c/webdriver/tests/element_retrieval/find_elements.py: Removed.